fixed text-align-last safari 不支援

--- a/src/assets/scss/compontent/_inputGroup.scss
+++ b/src/assets/scss/compontent/_inputGroup.scss
@@ -2,7 +2,7 @@
   position: relative;
   min-width: 8rem;
   .form-control {
-    text-align-last: center;
+    text-align: center;
     background-color: #fff;
   }
   .c-inputGroup__minusBtn {
